[tool.poetry]
name = "python_api"
version = "0.1.0"
description = ""
authors = ["aoliveira <aoliveira@keener.io>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
